2000-11-21  Stefan Monnier  <monnier@cs.yale.edu>

	* gnus-win.el (gnus-configure-windows): switch-to-buffer -> set-buffer.

2000-11-21  Dave Love  <fx@gnu.org>

	* gnus-art.el (gnus-mime-button-map): Don't inherit from
	gnus-article-mode-map.
	(gnus-mime-button-menu): Use mouse-set-point.
	(gnus-insert-mime-button, gnus-mime-display-alternative) 
	(gnus-mime-display-alternative): Don't use local-map property.

2000-11-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-open-telnet): Wait for the telnet prompt before
	sending a command; allow the rtelnet prompt as well.

2000-11-17  Simon Josefsson  <simon@josefsson.org>

	* nntp.el (nntp-async-trigger): Fix authinfo in asynchronous
	prefetch.

2000-11-17  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nntp.el (nntp-decode-text): Delete bogus status lines.
	(nntp-open-connection): Kill process buffer when quit.
	(nntp-connection-timeout): Add a note. SIGALRM is ignored in both
	FSF Emacs 20 and XEmacs 21.
	(nntp-retrieve-data): Don't ignore quit.

2000-11-17  Dave Love  <fx@gnu.org>

	* uudecode.el (uudecode-insert-char): Fix bogus feature test.
	(uudecode-decode-region-external): Doc fix.  Use with-temp-buffer
	and make-temp-file.
	(uudecode-decode-region): Doc fix.

2000-11-14  Dave Love  <fx@gnu.org>

	* cu-exit.pbm, exit-summ.pbm, followup.pbm, fuwo.pbm:
	* mail-reply.pbm, next-ur.pbm, post.pbm, prev-ur.pbm:
	* reply-wo.pbm, reply.pbm, rot13.pbm, save-aif.pbm, save-art.pbm:
	New files, derived from the XPMs.

2000-11-12  Dave Love  <fx@gnu.org>

	From Emerick Rogul <emerick@csa.bu.edu>.
	* message.el (message-setup-fill-variables): New variable.
	(message-mode): Use it.

2000-11-10 Alexandre Oliva <oliva@lsd.ic.unicamp.br>

	* gnus-mlspl.el: Documentation tweaks.
	
2000-11-10  Dave Love  <fx@gnu.org>

	* gnus-agent.el (gnus-agent-confirmation-function): Add :version.
	(gnus-agent-lib-file, gnus-agent-load-alist)
	(gnus-agent-save-alist, gnus-agent-article-name): Use
	expand-file-name.
